# FastCat

./: .eslintcache  .gitignore  .gitmodules  README.md  components.json  eslint.config.js  index.html  noUsePackage.json  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
public/icons/: icon.icns
resource/: Mods.json
resource/Json/: GameHash.json  version.json
src/: App.tsx  AppEnv.ts  auto-imports.d.ts  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/config/: commands.rs  data_type.rs  mod.rs
src-tauri/src/manager/: mod.rs
src-tauri/src/modmanager/: mod.rs
src-tauri/src/utils/: commands.rs  deeplink.rs  file.rs  mod.rs  pathget.rs
src/assets/Locales/: en.json  zh-cn.json
src/components/: AnimeOutlet.tsx  AnnouncementCard.tsx  ErrorFallback.tsx  ModsDetail.tsx  ModsList.tsx  siderBar.tsx
src/components/Layouts/: ExtensionsLayout.tsx  ImageBackGroundLayout.tsx  MainLayout.tsx  PageLayout.tsx
src/components/page/: App.tsx  welcome.tsx
src/components/shadcn/ui/: button.tsx
src/lib/: MenuItem.ts  checker.ts  locale.ts
src/lib/Types/: config.ts  data.ts  index.ts  infoType.ts  server.ts
src/lib/constant/: github-proxy.ts  tauri-constant.ts  url-constant.ts
src/lib/hooks/: use-swr-tauri.ts
src/lib/utils/: index.ts  log-utils.ts  route-utils.ts  tarui-utlis.ts
src/routes/: __root.tsx  index.tsx  mods.tsx  setting.tsx
src/routes/edit/: mod-config.tsx  server.tsx
src/routes/extension/: AccountManager.tsx  ServerEdit.tsx  ToolBox.tsx  index.tsx
src/styles/: heroui.ts  tailwindcss.css
src/styles/scss/: __root.module.scss  __root.module.scss.d.ts  main-layout.module.scss  module.scss
