[package]
name = "fastcat"
version = "0.1.0"
description = "A Among Us Mod Manager"
authors = ["TianMeng"]
edition = "2024"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fastcat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
tauri-plugin-shell = "2.2.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri-plugin-os = "2.2.1"
tauri-plugin-log = "2.4"
eyre = "0.6.12"
windows-registry = "0.5.1"
tauri-plugin-dialog = "2.2.1"
tauri-plugin-deep-link = "2.2.1"
dirs = "6.0.0"
tauri-plugin-fs = "2.2.1"
open = "5.3.2"
tauri-plugin-http = "2.4.3"
ping-rs = "0.1.2"
zip = "3.0.0"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-single-instance = "2.2.3"

